2004-02-04  jon phillips <kidproto@user.sf.net>

    * COPYING, COPYING.LIB, ChangeLog, Makefile.am, Makefile.mingw, 
      Makefile.mingw.common, NEWS, README, autogen.sh, configure.in, 
      inkscape-cvs-0.ebuild, inkscape.1.in, inkscape.spec.in: 
      all files converted from tabs to 4 spaces and cleaned up the 
      coding style, tested, they build, and have committed.
      
    * extension/*: I converted all files to coding style.

    * src/dialogs/align.cpp, src/dialogs/align.h, 
      src/dialogs/desktop-properties.cpp, src/dialogs/desktop-properties.h, 
      src/dialogs/dialog-events.cpp, src/dialogs/dialog-events.h: Converted 
      the following files to use our coding convention.


2004-02-04  bulia byak <bulia@users.sourceforge.net>

    * src/style.h src/style.cpp src/sp-text.cpp: Read-only (so far) support for
    letter-spacing CSS property

    * src/event-context.cpp src/select-context.cpp src/draw-context.cpp
    src/dyna-draw-context.cpp src/knotholder.cpp src/nodepath.cpp src/object-edit.cpp:
    Trimming #if 0

    * src/text-context.cpp: Trimming #if 0, removing unneeded document_done

    * src/spiral-context.cpp src/star-context.cpp: Trimming #if 0, enabling ctrl-drag

    * src/dialogs/dialog-events.cpp src/preferences-skeleton.h: Added
    options.transientpolicy, 1 as default

    * src/preferences-skeleton.h: Increased options.keyscroll

    * src/dialogs/xml-tree.cpp: Fix for 852619, fix for failed asserts when selecting root

    * src/widgets/gradient-selector.cpp: Fix for 854514, 856682 

2004-02-02  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

    * src/desktop-snap.h, src/desktop-snap.cpp: Indicate that the snap_list
    functions don't modify the passed snap points.  For the wrapper versions,
    don't bother "copying back the new [actually unchanged] versions".

2004-01-31  bulia byak <bulia@users.sourceforge.net>

    * src/zoom-context.cpp src/rect-context.cpp src/arc-context.cpp src/star-context.cpp